Fixup for price column setup in investment reports on loading files

After fixing a bug with the mentioned commit, an increase of
the file "fix version" was required, which did not happen.

Fixup for commit 0a516a8c.

BUG:501686
CCBUG:345550
FIXED-IN:5.1.94