kmymoney/mymoney/mymoneyfile.h
@@ -215,7 +215,7 @@ public:
      * @note keep in sync with MyMoneyDbDef::m_currentVersion
      */
     constexpr static int availableFixVersion() {
-        return 7;
+        return 8;
     }
 
     /**
